--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Checkout submodules
-        run: git clone https://github.com/gitgitTrue/NextChat.git
+        run: git clone https://github.com/gitgitTrue/NextChatTempAPP.git
 
       - name: Setup NodeJs
         uses: actions/setup-node@v4
@@ -26,23 +26,23 @@ jobs:
           flutter-version: 3.24.1
 
       - name: Install @cloudflare/next-on-pages
-        working-directory: ./NextChat
+        working-directory: ./NextChatTempAPP
         run: npm i @cloudflare/next-on-pages
 
       - name: Install Deps
-        working-directory: ./NextChat
+        working-directory: ./NextChatTempAPP
         run: yarn install
 
       - name: Build Site
-        working-directory: ./NextChat
+        working-directory: ./NextChatTempAPP
         run: npx @cloudflare/next-on-pages@1
 
       - name: Zip HTML
-        working-directory: ./NextChat/.vercel/output
+        working-directory: ./NextChatTempAPP/.vercel/output
         run: mv static web && zip -q -r web.zip ./web/
 
       - name: Move Zip File
-        run: mkdir assets && ls ./NextChat/.vercel/output/ && mv ./NextChat/.vercel/output/web.zip ./assets/ && ls ./assets
+        run: mkdir assets && ls ./NextChatTempAPP/.vercel/output/ && mv ./NextChatTempAPP/.vercel/output/web.zip ./assets/ && ls ./assets
 
       - name: Upload Web Zip
         uses: actions/upload-artifact@v4
